--- a/src/pages/Tab3.css
+++ b/src/pages/Tab3.css
@@ -1,3 +1,12 @@
+ion-page {
+    --background-color: #000000;
+    
+}
+/*
+ion-content::part(background) {
+    background: #e6e6e6;
+}
+*/
 ion-note {
     text-align-last: auto;
     font-size: medium;
@@ -21,4 +30,5 @@ ion-card {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 25px;
+    box-shadow: 10em;
 }
