--- a/src/pages/Tab1.css
+++ b/src/pages/Tab1.css
@@ -3,6 +3,15 @@
     --color: #52ffe4; 
 }
 
+ion-item-divider {
+  --background: #bc2075;
+  --color: #ffffff;
+  font-weight: bold;
+  font-size: large;
+  text-align: center;
+  
+}
+
 #desserts {
   --background: grey;
 }
@@ -40,7 +49,7 @@ ion-card {
     padding: 5px;
     vertical-align:auto;
   }
-
+/*
   ion-searchbar {
     max-width: 300px;
     --background-color: #e76b9d;
@@ -48,7 +57,7 @@ ion-card {
     --cancel-button-color: "warning";
     text-align: center;
   }
-
+*/
   ion-toast {
     --background: rgb(113, 201, 129);
     --border-radius: 15px;
